# Projectile

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
data/: build.rs
docs/: CNAME  api.json  index.json  path.md
examples/Typescript/: .gitignore  LICENSE  main.ts  package.json  project.yml  tsconfig.json
src/: cfg.rs  installer.rs  logger.rs  main.rs  updater.rs  utils.rs  windows.rs
