[package]
name = "projectile"
version = "0.1.0"
edition = "2021"
build = "data/build.rs"
authors = ["holasoyender"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0.0"

[dependencies]
dirs = "4.0.0"
config = "0.13.1"
notify = "4.0.17"
winconsole = "0.11.1"
yaml-rust = "0.4.5"

